--- a/index.html
+++ b/index.html
@@ -1,114 +1,46 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perfil Gamer</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
+    <title>Home</title>
+    <link rel="stylesheet" href="styles.css"> 
 
+</head>
 <body>
     <header>
-        <div class="container">
-            <div class="logo">
-                <img src="logo/logo.png" alt="Logo Gamer">
-            </div>
-            <h1>Promodx</h1>
+        <div class="logo">
+            <img src="logo/logo.png" alt="logo Promodx">
+            <h1><span>P</span>romodx </h1>
         </div>
+
     </header>
-    <main>
-        <section id="about">
-            <div class="container">
-                <h2>Sobre!!!</h2>
-                    <p>Olá! Seja bem-vindo ao meu perfil gamer. Aqui você encontrará informações sobre os games que estou
-                    jogando.</p>  
-            </div>
-        </section>
-        <section id="games">
-            <div class="container">
-                <h2>Games</h2>
-                <div class="game-list">
-                    <div class="game-card">
-                        <a href="Skyrim.html">  <img src="games/skayRim1.jpeg" alt="Skyrim: Bethesda Game Studios">
-                            <p>Skyrim</p>
-                          </a>
-                    </div>
-                    <div class="game-card">
-                        <a href="pgameWitcher3.html">
-                            <img src="games/TW3_Wild_Hunt.png" alt="The Witcher 3: Wild Hunt">
-                            <p>The Witcher 3: Wild Hunt</p>
-                        </a>
-                    </div>
-                    <div class="game-card">
-                        <a href="pgameFalout4.html">
-                            <img src="games/Falout4--.jpg" alt="Falout4">
-                            <p>Falout4</p>
-                        </a>
-                    </div>
-                    <div class="game-card">
-                        <a href="pgameEldenRing.html">
-                            <img src="games/Elden Ring.jpg" alt="Elden Ring">
-                            <p>Elden Ring</p>
-                        </a>
-                    </div>
-                    <div class="game-card">
-                        <a href="pgameCyberpunk2077.html">
-                            <img src="games/Cyberpunk_2077_capa.png" alt="Cyberpunk 2077">
-                            <p>Cyberpunk 2077</p>
-                        </a>
-                    </div>
-                    <div class="game-card">
-                        <a href="pgameDayZ.html">
-                            <img src="games/DAYZ2.jpg" alt="DayZ">
-                            <p>DayZ</p>
-                        </a>
-                    </div>
-                    <div class="game-card">
-                        <a href="pgameScum.html">
-                            <img src="games/scum - Copia1.jpg" alt="Scum">
-                            <p>Scum</p>
-                        </a>
-                    </div>
-                    <div class="game-card">
-                        <a href="pgameDedSide.html">
-                            <img src="games/DedSide.jpg" alt="Ded Side">
-                            <p>Ded Side</p>
-                        </a>
-                    </div>
-                    <div class="game-card">
-                        <a href="pgameStalker.html">
-                            <img src="games/stalker.jpg" alt="S.T.A.L.K.E.R">
-                            <p>S.T.A.L.K.E.R</p>
-                        </a>
-                    </div>
-                    <div class="game-card">
-                        <a href="pgameRedDeadRedemption2.html">
-                            <img src="games/redded.jpg" alt="Red Dead Redemption 2">
-                            <p>Red Dead Redemption 2</p>
-                        </a>
-                    </div>
-                    <div class="game-card">
-                        <a href="pgameDoom.html">
-                            <img src="games/doom.jpg" alt="DOOM">
-                            <p>DOOM</p>
-                        </a>
-                    </div>
-                    <div class="game-card">
-                        <a href="pgameHuntShowdown.html">
-                            <img src="games/Hunt_Showdown.jpg" alt="Hunt Showdown">
-                            <p>Hunt Showdown</p>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
+    <nav>
+        <a href="#">Galeria de Games !!!</a>
+        <a href="#"></a>
+        <a href="#"></a>
+    </nav>
+    <section>
+        <div class="gallery">
+            <a href="skyrim.html"><img src="games/skayRim1.jpeg" alt="Imagem 1"></a>
+            <a href="scum.html"><img src="games/scum.jpg" alt="Imagem 2"></a>
+            <a href="dedSide.html"><img src="games/DedSide.jpg" alt="Imagem 3"></a>
+            <a href="# pagina2.html"><img src="games/TW3_Wild_Hunt.png" alt="Imagem 2"></a>
+            <a href="# pagina3.html"><img src="games/Elden Ring.jpg" alt="Imagem 3"></a>
+            <a href="# pagina4.html"><img src="games/stalker.jpg" alt="Imagem 4"></a>
+            <a href="# pagina5.html"><img src="games/Falout4--.jpg" alt="Imagem 5"></a>
+            <a href="# pagina8.html"><img src="games/DAYZ2.jpg" alt="Imagem 8"></a>
+            <a href="# pagina9.html"><img src="games/cyberpunk_2077_night_city1.jpg" alt="Imagem 9"></a>
+            <a href="# pagina10.html"><img src="games/Hunt_Showdown.jpg" alt="Imagem 10"></a>
+            <a href="# pagina11.html"><img src="games/redded.jpg" alt="Imagem 11"></a>
+            <!-- Adicione mais imagens e links conforme necessário -->
+        </div>
+    </section>
     <footer>
         <div class="container_footer">
-            <p>&copy; 2024 Perfil Gamer. Todos os direitos reservados.</p>
+            <p>&copy; 2024 Promodx. Todos os direitos reservados.</p>
         </div>
     </footer>
 </body>
-
 </html>
+
