--- a/dedSide.html
+++ b/dedSide.html
@@ -14,8 +14,12 @@
             <iframe width="560" height="315" src="https://www.youtube.com/embed/xqIGzVmZ3hU?si=XGIC8AUNDTqXCMqm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
 
+        <div class="video">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/ffwOWCezX2g?si=iKJ5Rkaszv55Gbn4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>    
     </div>
 
+    
     <a href="index.html" class="btn-voltar">Voltar para Página Inicial</a>
 </body>
 </html>
