--- a/dedSide.html
+++ b/dedSide.html
@@ -9,14 +9,28 @@
 <body>
     <h1>Vídeos DedSide</h1>
 
-    <div class="video-container">
+    <div class="video-container"> <!-- # 1-->
         <div class="video">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/xqIGzVmZ3hU?si=XGIC8AUNDTqXCMqm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
 
-        <div class="video">
+        <div class="video"> <!-- # 2-->
             <iframe width="560" height="315" src="https://www.youtube.com/embed/ffwOWCezX2g?si=iKJ5Rkaszv55Gbn4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        </div>    
+        </div>
+        
+        <div class="video"> <!-- # 3-->
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/ksrUBZvUoAU?si=V1APDkA8kKojV75I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+
+        <div class="video"><!-- # 4-->
+            <div class="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/BDvaegL5Zu0?si=6bevb8GCR49n3wtN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div> 
+        </div> 
+
+        <div class="video"><!-- # 5-->
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/bPun0pbWOH0?si=hPRRu34RC2scNY19" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div> 
     </div>
 
     
