Atualização videos novos

--- a/dayZ.html
+++ b/dayZ.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vídeos DedSide</title>
+    <title>Vídeos DayZ</title>
     <link rel="stylesheet" href="styles_V1.0.css"> 
 </head>
 <body>
@@ -12,11 +12,9 @@
     <script>
         // Array com as URLs dos vídeos
         let videoUrls = [
-            'https://www.youtube.com/embed/xqIGzVmZ3hU?si=XGIC8AUNDTqXCMqm', // video 1 //
-            'https://www.youtube.com/embed/ffwOWCezX2g?si=iKJ5Rkaszv55Gbn4', // video 2 //
-            'https://www.youtube.com/embed/ksrUBZvUoAU?si=V1APDkA8kKojV75I', // video 3 //
-            'https://www.youtube.com/embed/BDvaegL5Zu0?si=6bevb8GCR49n3wtN', // video 4 //
-            'https://www.youtube.com/embed/bPun0pbWOH0?si=hPRRu34RC2scNY19', // video 5 //
+            'https://www.youtube.com/embed/MX5Oz6VHaLY?si=GtjIXn5MP8NHPKhM', // video 1 //
+            'https://www.youtube.com/embed/Lv7FUvh4lis?si=4TUtQOJ-9Hg8DZpw', // video 2 //
+
             // Adicione mais URLs conforme necessário
         ];
 
@@ -58,4 +56,3 @@
     <a href="index.html" class="btn-voltar">Voltar para Home</a>
 </body>
 </html>
-
