--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             <a href="skyrim.html"><img src="games/skayRim1.jpeg" alt="Imagem 1"></a>
             <a href="scum.html"><img src="games/scum.jpg" alt="Imagem 2"></a>
             <a href="dedSide.html"><img src="games/DedSide.jpg" alt="Imagem 3"></a>
-            <a href="fallout4.html"><img src="games/Falout4--.jpg" alt="Imagem 4"></a>
+            <a href="dayZ.html"><img src="games/DAYZ2.jpg" alt="Imagem 4"></a>
+            <a href="fallout4.html"><img src="games/Falout4--.jpg" alt="Imagem 5"></a>
             <a href="# pagina2.html"><img src="games/TW3_Wild_Hunt.png" alt="Imagem 2"></a>
             <a href="# pagina3.html"><img src="games/Elden Ring.jpg" alt="Imagem 3"></a>
             <a href="# pagina4.html"><img src="games/stalker.jpg" alt="Imagem 4"></a>
-            <a href="# pagina8.html"><img src="games/DAYZ2.jpg" alt="Imagem 8"></a>
             <a href="# pagina9.html"><img src="games/cyberpunk_2077_night_city1.jpg" alt="Imagem 9"></a>
             <a href="# pagina10.html"><img src="games/Hunt_Showdown.jpg" alt="Imagem 10"></a>
             <a href="# pagina11.html"><img src="games/redded.jpg" alt="Imagem 11"></a>
