--- a/dayZ.html
+++ b/dayZ.html
@@ -14,6 +14,7 @@
         let videoUrls = [
             'https://www.youtube.com/embed/MX5Oz6VHaLY?si=GtjIXn5MP8NHPKhM', // video 1 //
             'https://www.youtube.com/embed/Lv7FUvh4lis?si=4TUtQOJ-9Hg8DZpw', // video 2 //
+            'https://www.youtube.com/embed/kcgYtA0Woxc?si=6bfwlqvHOdES5Htv', // video 3 //
 
             // Adicione mais URLs conforme necessário
         ];
